--- a/Components/index.html
+++ b/Components/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel Pangat</title>
-    <link rel="stylesheet" href="../Css/index.css">
+    <link rel="stylesheet" href="../Css/ai.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&amp;display=swap" rel="stylesheet"/>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -25,7 +25,7 @@
         </ul>
         <div class="navbar-actions">
           
-          <a href="cart.html">Cart(0)</a> 
+            <a href="cart.html" id="cartCount">Cart(0)</a> 
         </div>
         <div class="navbar-toggle" id="navbarToggle">
           <span></span>
