--- a/Components/menu.html
+++ b/Components/menu.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../Css/index.css">
+    <!-- <link rel="stylesheet" href="../Css/index.css"> -->
+     <link rel="stylesheet" href="../Css/ai.css">
     <link rel="stylesheet" href="../Css/menu.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&amp;display=swap" rel="stylesheet"/>
@@ -25,7 +26,7 @@
     </ul>
     <div class="navbar-actions">
       
-      <a href="cart.html">Cart(0)</a> 
+      <a href="cart.html" id="cartCount">Cart(0)</a> 
     </div>
     <div class="navbar-toggle" id="navbarToggle">
       <span></span>
@@ -49,6 +50,11 @@
           
             <!-- Products will be loaded dynamically here -->
         </div>
+
+        <div id="popup" class="popup">
+          <!-- Popup content will be dynamically inserted here -->
+      </div>
+      
     </center>
     </section>
 
