--- a/Components/contact.html
+++ b/Components/contact.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
-    <link rel="stylesheet" href="../Css/index.css">
+    <!-- <link rel="stylesheet" href="../Css/index.css"> -->
+     <link rel="stylesheet" href="../Css/ai.css">
     <link rel="stylesheet" href="../Css/contact.css">
     
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
