--- a/Components/contact.html
+++ b/Components/contact.html
@@ -18,10 +18,10 @@
         <ul class="navbar-menu" id="navbarMenu">
           <li><a href="index.html">Home</a></li>
           <li><a href="menu.html">Menu</a></li>
+          <li><a href="booking.html">Book Table</a></li>
+          <li><a href="about.html">About Us</a></li>
           <li><a href="gallery.html">Gallery</a></li>
           <li><a href="#">Contact</a></li>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Book Table</a></li>
         </ul>
         <div class="navbar-actions">
           
@@ -36,9 +36,8 @@
 
     <header>
         <h2>Contact Us</h2>
-        <div class="underline"></div>
     </header>
-    <div class="container">
+    <div class="containers">
         <div class="contact-details">
             <h2>Get In Touch</h2>
             <div class="location">
@@ -56,8 +55,8 @@
             <div class="Opening-hours">
                 <h3><i class='bx bxs-time'></i>Opening Hours</h3>
                 <p style="margin: 7px 7px;">Monday-Saturday : 
-                <li>11:00 AM - 03:00 PM
-                <li>7 PM - 11:00 PM 
+                <li class="yz">11:00 AM - 03:00 PM</li>
+                <li class="yz">7 PM - 11:00 PM </li>
                 </p>
             </div>
 
