--- a/Components/index.html
+++ b/Components/index.html
@@ -18,10 +18,10 @@
         <ul class="navbar-menu" id="navbarMenu">
           <li><a href="#">Home</a></li>
           <li><a href="menu.html">Menu</a></li>
+          <li><a href="booking.html">Book Table</a></li>
+          <li><a href="about.html">About</a></li>
           <li><a href="gallery.html">Gallery</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Book Table</a></li>
         </ul>
         <div class="navbar-actions">
           
@@ -40,7 +40,7 @@
             <div class="text-title">
                 <h1>Enjoy our Delicious meal</h1>
                 <p>Through booking your table at hotel pangat instantly. Enjoy a hassle-free and unforgettable dining moment while exploring special yummy dishes. Saver tasty food delivered to your Eat with relish!</p>
-                <a href="#"><button id="home-btn">Order now</button></a>
+                <a href="menu.html"><button id="home-btn">Order now</button></a>
             </div>
             <div class="home-img">
                 <img src="../Images/Thali-img.png" alt="">
@@ -189,7 +189,7 @@
                 </div>
                 <div class="about-text">
                     <h4>Experience pangat hotel where delicious food meets exceptional service. We invite you to savor a symphony of flavors, from our signature butter chicken to seafood with innovative twists. Our user-friendly online platform makes ordering your favorite dishes a breeze. Experience the ambiance of our elegant dining table while our attentive staff ensures a memorable dining experience. </h4>
-                    <a href="#" class="know-more-button">Know More</a> 
+                    <a href="menu.html" class="know-more-button">Know More</a> 
                 </div>
             </div>
         </div>
