--- a/Components/menu.html
+++ b/Components/menu.html
@@ -19,10 +19,10 @@
     <ul class="navbar-menu" id="navbarMenu">
       <li><a href="index.html">Home</a></li>
       <li><a href="#">Menu</a></li>
+      <li><a href="booking.html">Book Table</a></li>
+      <li><a href="about.html">About Us</a></li>
       <li><a href="gallery.html">Gallery</a></li>
       <li><a href="contact.html">Contact</a></li>
-      <li><a href="#">About Us</a></li>
-      <li><a href="#">Book Table</a></li>
     </ul>
     <div class="navbar-actions">
       
