--- a/Components/about.html
+++ b/Components/about.html
@@ -240,7 +240,7 @@
         <div class="navbar-toggle" id="navbarToggle">
           <span></span>
           <span></span>
-          <span></span>
+          <span></span> 
         </div>
       </nav>
 
@@ -258,7 +258,47 @@
     </section>
 
     <footer>
-        <p>&copy; 2023 Maywood. All rights reserved.</p>
+        <div class="footer-container">
+            <div class="footer-column">
+                <div class="footer-logo">
+                    <img src="../Images/logo1.png" alt="Pangat_Hotel" >
+                </div>
+                <p style="text-align:left; font-size: 1.2em; padding-top: 0;">Your one-stop destination for delicious food and symphony of flavors at your Pangat Hotel.</p>
+                <div class="footer-social">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-youtube"></i></a>
+                </div>
+            </div>
+            <div class="footer-column">
+                <h3>Categories</h3>
+                <ul>
+                    <li><a href="#">All</a></li>
+                    <li><a href="#">Veg</a></li>
+                    <li><a href="#">Fish</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">My Account</a></li>
+                    <li><a href="#">Book Table</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Gallery</a></li>
+                    <li><a href="#">Terms and Conditions</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3>Contact Info</h3>
+                <p><i class='bx bxs-map' style="font-size: 1.8em; gap: 10px; margin-top: 0px;" ></i>    PC8V+HC3, Station Road,<br>     Korochi, Ichalkaranji, Maharashtra 416121</p>
+                <p><i class='bx bxs-phone'style="font-size: 1.8em; gap: 10px;" ></i> 90757 77575, 8180805252</p>
+                <p><i class='bx bxs-envelope'style="font-size: 1.8em; gap: 10px;" ></i><a href="mailto:pangathotel@gmail.com">  pangathotel@gmail.com</a></p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; <?php echo date("Y"); ?> Pangat Hotel. All rights reserved. </p>
+        </div>
     </footer>
     <script src="../Javascript/index.js"></script>
 </body>
