--- a/Components/about.html
+++ b/Components/about.html
@@ -281,12 +281,11 @@
             <div class="footer-column">
                 <h3>Quick Links</h3>
                 <ul>
-                    <li><a href="#">Contact Us</a></li>
-                    <li><a href="#">My Account</a></li>
-                    <li><a href="#">Book Table</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Gallery</a></li>
-                    <li><a href="#">Terms and Conditions</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                    <li><a href="booking.html">Book Table</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="terms.html">Terms and Conditions</a></li>
                 </ul>
             </div>
             <div class="footer-column">
